# DanielsAst390

./: CMakeLists.txt  README.md
FinalProject/: CMakeLists.txt
FinalProject/docs/: CMakeLists.txt  writeup.tex
FinalProject/examples/: compare_integrators.cpp
FinalProject/include/: orbit.h
FinalProject/src/: orbit.cpp
FinalProject/tools/: CompareIntegratorsPlots.py
HomeworkFive/: CMakeLists.txt
HomeworkFive/docs/: CMakeLists.txt  writeup.tex
HomeworkFive/examples/: problem.cpp
HomeworkFive/include/: logspace.h  twodiminterp.h
HomeworkFive/src/: twodiminterp.cpp
HomeworkFour/: CMakeLists.txt
HomeworkFour/data/: NoiseAndKernal.eps  NoiseAndKernalFFT.eps  plotted_file.eps
HomeworkFour/examples/: problem_one.cpp  problem_two.py
HomeworkFour/include/: linearsolver.h  matrix.h
HomeworkOne/: CMakeLists.txt  HomeworkOne.kdev4  QuestionOne  QuestionTwo
HomeworkOne/docs/: CMakeLists.txt  packages.tex  writeup.aux  writeup.out  writeup.tex  writeup.tex~  writeup.toc
HomeworkOne/examples/: question_one.cpp  question_two.cpp
HomeworkOne/include/: differentiator.h
HomeworkOne/src/: differentiator.cpp
HomeworkSeven/docs/: writeup.tex
HomeworkSeven/examples/: problem.py
HomeworkSix/: CMakeLists.txt
HomeworkSix/docs/: CMakeLists.txt  writeup.tex
HomeworkSix/examples/: problem.py
HomeworkThree/: CMakeLists.txt
HomeworkThree/data/: CMakeLists.txt
HomeworkThree/docs/: CMakeLists.txt  writeup.tex
HomeworkThree/examples/: problem_one.cpp  problem_two.cpp
HomeworkThree/include/: eulercromer.h  eulercromerpendulum.h  eulermethod.h  eulerpendulum.h  ode_integrator.h  pendulum.h  velocityverletpendulum.h
HomeworkThree/src/: eulercromer.cpp  eulercromerpendulum.cpp  eulermethod.cpp  eulerpendulum.cpp  ode_integrator.cpp  pendulum.cpp  velocityverletpendulum.cpp
HomeworkThree/tools/: P1_plots.py
HomeworkTwo/: CMakeLists.txt  HomeworkTwo.kdev4  ProblemOne  ProblemTwo
HomeworkTwo/docs/: CMakeLists.txt  writeup.tex  writeup.tex~
HomeworkTwo/examples/: problem_one.cpp  problem_two.cpp  simpons_rule_demo.cpp
HomeworkTwo/include/: indefinite_integrals.h  simpsons.h
HomeworkTwo/src/: indefinite_integrals.cpp  simpsons.cpp
HomeworkTwo/tools/: derivation.ipynb
LatexAssets/: packages.tex
